frontend/notex/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Shadows+Into+Light&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    font-family: "Poppins", "sans-serif";
  }

  body {
    background-color: #fdfeff;
    overflow-x: hidden;
  }
}

@layer components {
  .input-box {
    @apply w-full text-sm bg-transparent border-[1.5px] px-5 py-3 rounded mb-4 outline-none;
  }

  .btn-primary {
    @apply w-full text-sm bg-primary text-white p-2 rounded my-1 hover:bg-blue-600;
  }

  .icon-btn {
    @apply text-xl text-slate-300 cursor-pointer hover:text-primary;
  }

  .input-label {
    @apply text-xs text-slate-400;
  }
}

